--- a/src/components/oneProduct.css
+++ b/src/components/oneProduct.css
@@ -1,6 +1,6 @@
 .Oneproduct {
 width: 100%;
-    height: 40vh;
+    height: fit-content;
     background-color: #DDE6ED;
     display: flex;
     align-items: center;
